# auto-priors-rs

./: .gitignore  .gitmodules  404.html  Cargo.toml  LICENSE.txt  Makefile  README.md  cli.completions.zsh  concepts.html  configuration.html  index.html  print.html  run-cli  run-rocket  searchindex.js  setup.html  toc.html  toc.js
.sqlx/: query-00fe92db9d25a17f3ac5979fac11b976441b6aaf7175c1a24b3ae98d20969600.json  query-03796c57de2f48f6dc4b7f7d67b0921276d94fc8d068ff52175cb35201a0c57e.json  query-04b327c35b10eca3d5cef2bb2ca425979b6ea9ea10ec9f2c441b70962286b4ae.json  query-0b2b884ffeab51be776b8182cce330d630ab6a355542b3a653505115c35950e4.json  query-0b90942f254d2f2a021c96cff6174914c6f3cb371904dee96e76c12581abc3a1.json  query-0de8729c9808d2e7ef1734cad95845ff143ce8db22869e438bb5d4a1a2fab5a8.json  query-0ed5765a4548d6016a8df8d647be7743d313b3dbed3cd3ff77ebb652729a62e5.json  query-0f13f11773b840f96bc8008a1cdf3dd9484a21734ce12c1d668a47ea4f02641a.json  query-102ac44e27e0eea179bd50d60f67f4241a34950915f76717395ddcc8f32f4aff.json  query-129c247044787dfd99b11ba35b29f22a765b1350cdb5fa1421b992284cac3494.json  query-1410d6bfaf612718887939ed82fdc134e910358e5686c9b3a1e59d52facf7691.json  query-177cd833d0ce7d4a8f0b939a261571d8760073dac188ee88d82377256f74b86f.json  query-177ddf4119aaf40b69c79115d9867299023b1f58033f4e92160f7ee29ba3720f.json  query-1b2b0ae44475c57afff26a97c87e5c55c6d4067ede295494380e1aeb63eaccc3.json  query-1cccb9011418959de3a8a26d320b5a6c79adfd000242c25ea582d1fe4d42b30c.json  query-1d2d398b753667cb97ca27b7968542f79d0eab88bbcb56727d702f4217babd2d.json  (+129 more)
book/: book.toml
cli/: Cargo.toml
cli/src/: api.rs  auth.rs  config.rs  dbexport.rs  email.rs  input_files.rs  jobs.rs  lib.rs  main.rs  met_download.rs  siteinfo.rs  stdsites.rs  utils.rs
cli/test_input_files/blacklisted/: no_reason_bl.txt  silent_bl.txt  with_reason_bl.txt
cli/test_input_files/should_fail/: alt_met_out_of_range.txt  bad_alt_met.txt  bad_date_fmt.txt  bad_date_order.txt  bad_file_fmt.txt  dates_out_of_range.txt  dates_same.txt  input_file_too_many_days.txt  latlon_out_of_range.txt  long_multi_site_id.txt  long_site_id.txt  mismatch_site_latlon_1.txt  mismatch_site_latlon_2.txt  unknown_std_site.txt  wrong_key_value.txt
cli/test_input_files/should_pass/: all_keys.txt  all_keys_reordered.txt  all_positional.txt  carriage_return.txt  carriage_returns_all_lines.txt  egi1.txt  mixed_keys_pos.txt  multi_loc_multi_ids.txt  multi_loc_one_id.txt  req_keys.txt  req_positional.txt  short_all_keys.txt  short_all_keys_no_confirm.txt  short_all_keys_with_met.txt  short_alt_met.txt  split_days.txt  std_sites.txt  trailing_whitespace.txt
cli/tests/: input_file_tests.rs  job_tests.rs  met_tests.rs  site_info_update_tests.rs  site_job_service_tests.rs  site_job_update_key_tests.rs
cli/tests/common/: config_target_dummy  mod.rs  test_config.toml
cli/tests/sql/: check_finding_met_file.sql  check_finding_met_path.sql  check_geos_fpit_next_date.sql  check_geos_fpit_next_partial.sql  check_geos_fpit_next_partial_scattered.sql  check_geos_fpit_plus_it_next_date.sql  check_geos_fpit_plus_it_single_met.sql  check_geos_fpit_to_it_transition_next_date.sql  check_geos_it_next_date.sql  check_met.sql  test_round_robin_fairshare.sql  two_test_jobs.sql
cli/tests/sql/stdsites/: add_20230531_jobs.sql  init_test_sites.sql  update_proc_key.sql
core-orm/: Cargo.toml
core-orm/migrations/: 0001_initial.down.sql  0001_initial.up.sql  0002_web_auth.down.sql  0002_web_auth.up.sql  0003_api_auth.down.sql  0003_api_auth.up.sql  0004_flex_met.down.sql  0004_flex_met.up.sql  0005_job_proc_key.down.sql  0005_job_proc_key.up.sql  0006_sitejob_proc_key.down.sql  0006_sitejob_proc_key.up.sql
core-orm/migrations-ci/: 0001_initial.down.sql  0001_initial.up.sql  0002_web_auth.down.sql  0002_web_auth.up.sql  0003_api_auth.down.sql  0003_api_auth.up.sql  0004_flex_met.down.sql  0004_flex_met.up.sql  0005_job_proc_key.down.sql  0005_job_proc_key.up.sql  0006_sitejob_proc_key.down.sql  0006_sitejob_proc_key.up.sql
core-orm/src/: auth.rs  config.rs  defaultopts.rs  downloading.rs  email.rs  error.rs  export.rs  geos.rs  input_files.rs  jobs.rs  lib.rs  met.rs  siteinfo.rs  stdsitejobs.rs  test_config.toml  test_utils.rs  utils.rs
core-orm/src/auth/: api.rs
core-orm/src/config/: execution.rs  helpers.rs  met_download.rs  mod.rs  processing.rs  processing_config.rs
core-orm/src/jobs/: requests.rs
python/: .gitignore  0000_init_down.sql  (+4 more)
python-bindings/: Cargo.toml  pyproject.toml  setup.sh
python-bindings/src/: lib.rs
rocket-app/: Cargo.toml
rocket-app/src/: jobs.rs  main.rs  nav.rs  stdsites.rs
rocket-app/src/api/: v1.rs
rocket-app/static/: main.css
rocket-app/templates/: base.html.tera  index.html.tera  nav.html.tera  std-site-table.html.tera
service/: Cargo.toml
service/scripts/: factorial.py  fib.py
service/src/: error.rs  jobs.rs  lib.rs  logging.rs  main.rs  met.rs  reports.rs  stdsitejobs.rs
service/tests/: site_job_service_tests.rs
service/tests/sql/: add_20230530_jobs.sql  add_20230601_jobs.sql  init_test_sites.sql  stdsite_met.sql
web-app/: Cargo.toml
web-app/src/: api.rs  auth.rs  auth_api.rs  auth_web.rs  home.rs  jobs.rs  main.rs  met_data.rs  std_sites.rs  templates.rs  templates_common.rs
web-app/src/api/: check.rs  doc_helpers.rs  documentation.rs  download.rs  jobs.rs  middleware.rs  query.rs
web-app/src/api/documentation/: filters.rs  helpers.rs  html.rs  html_code_examples.rs  html_components.rs  json_examples.rs
web-app/static/: main.css
web-app/templates/: api-docs.html  base.html  home.html  job-download.html  job-queue.html  job-statuses.html  login.html  met-data.html  queue_table.html  std-sites.html  submit-job.html
web-app/templates/docs/: api-documentation.html  code-curl-get.txt  code-curl-post.txt  code-python-get.txt  code-python-post.txt  component-schema-array.html  component-schema-object.html  component-schema-one-of.html  component-schema.html  endpoint-doc.html  path-request-body.html  ref-or-response.html  ref-or-schema.html  response.html
web-app/tests/common/: mod.rs
(+71 files in other folders)
