[package]
name = "tccon-priors-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "3.2", features = ["derive"]}
clap-verbosity-flag = "1.0"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
tokio-test = "0.4.2"
orm = {path = "../core-orm", package = "tccon_priors_orm"}

[dependencies.sqlx]
version = "0.5"
# Copied version and runtime from deps/Rocket/contrib/db_pools/lib/Cargo.toml
features = ["mysql", "runtime-tokio-rustls", "chrono"]

[dependencies.tokio]
# Using the same version as Rocket to *hopefully* avoid weird issues
version = "1.6.1"
features = ["full"]

[dev-dependencies]
serial_test = "1.0.0"
toml = "0.5"
url = "2.4"

[[bin]]
name = "tccon_priors_cli"
path = "src/main.rs"

[lib]
