[package]
name = "tccon-priors-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = {version = "3.2", features = ["derive"]}
clap-verbosity-flag = "1.0"
dotenv = "0.15"
env_logger = "0.9"
chrono.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true

orm = {path = "../core-orm", package = "tccon_priors_orm"}
termsize = "0.1.6"

[dev-dependencies]
hex-literal = "0.4"
md-5 = "0.10"
serial_test = "1.0.0"
tempdir = "0.3"
tokio-test = "0.4.2"
toml = "0.5"

[[bin]]
name = "tccon_priors_cli"
path = "src/main.rs"

[lib]
