[package]
name = "tccon-priors-cli"
version = "2.0.0"  # The Python version is considered v1
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete = "3"
clap-verbosity-flag = "1.0"
dotenv.workspace = true
env_logger.workspace = true
chrono.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true

orm = {path = "../core-orm", package = "tccon_priors_orm"}
tabled.workspace = true

[dev-dependencies]
hex-literal = "0.4"
md-5 = "0.10"
serial_test = "1.0.0"
tempdir = "0.3"
tokio-test = "0.4.2"
toml = "0.5"

[[bin]]
name = "tccon-priors-cli"
path = "src/main.rs"

[lib]
