[package]
name = "tccon_priors_orm"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = {workspace = true, features = ["serde"]}
dotenv.workspace = true
futures = "0.3"
glob.workspace = true
hostname = "0.3"
itertools.workspace = true
lettre.workspace = true
log.workspace = true
netrc-rs = "0.1"
# pyo3 = "0.16.5"
serde.workspace = true
serde_json.workspace = true
sqlx = {workspace = true, features = ["macros"]}
toml = "0.8" #"0.5"
url.workspace = true
tabled.workspace = true
tokio.workspace = true
whoami = "1.5.1"
tar = "0.4.40"
flate2 = "1.0.26"

# Dependencies for shared testing utils
testcontainers-modules = {workspace = true, optional = true}

[features]
container-tests = ["dep:testcontainers-modules"]
