[package]
name = "tccon_priors_orm"
version = "3.0.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum-login.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
djangohashers.workspace = true
dotenv.workspace = true
env_logger.workspace = true
futures = "0.3"
glob.workspace = true
hostname = "0.3"
itertools.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
log.workspace = true
netrc-rs = "0.1"
# pyo3 = "0.16.5"
rand = "0.9.1"
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros"] }
strum.workspace = true
toml = "0.8"                                       #"0.5"
url.workspace = true
utoipa.workspace = true
tabled.workspace = true
tempdir.workspace = true
thiserror.workspace = true
tokio.workspace = true
whoami = "1.5.1"
tar = "0.4.40"
flate2 = "1.0.26"

# Dependencies for shared testing utils
testcontainers-modules = { workspace = true, optional = true }


[features]
container-tests = ["dep:testcontainers-modules"]
