[package]
name = "py_ginput_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_ginput_bindings"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
futures = "0.3"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
pyo3-chrono = "0.4.0"
orm = {path = "../core-orm", package = "tccon_priors_orm"}