[package]
name = "tccon-priors-service"
version = "3.0.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
clokwerk = "0.4"
log4rs = "1.2"
signal-hook = "0.3"

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
glob.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true

orm = { path = "../core-orm", package = "tccon_priors_orm" }
cli = { path = "../cli", package = "tccon-priors-cli" }
# console-subscriber = "0.1.10"
