[package]
name = "tccon-priors-service"
version = "2.0.23"  # jumped to v2 because v1 is the Python automation
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait.workspace = true
clokwerk = "0.4"
log4rs = "1.2"
signal-hook = "0.3"

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
glob.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true

orm = {path = "../core-orm", package = "tccon_priors_orm"}
cli = {path = "../cli", package = "tccon-priors-cli"}
# console-subscriber = "0.1.10"
