[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = "0.7.3"
axum-login = "0.12.0"
env_logger.workspace = true
log.workspace = true
tera = "1.19.1"
tokio.workspace = true
orm = {path = "../core-orm", package = "tccon_priors_orm"}
lazy_static = "1.4.0"
tower-http = {version = "0.5.0", features = ["fs"]}
