[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
askama = "0.12.1"
askama_axum = "0.4.0"
async-trait.workspace = true
axum = "0.7.3"
axum-login = "0.15.3"
djangohashers = "1.7.3"
env_logger.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
sqlx.workspace = true
# tera = "1.19.1"
thiserror = "1.0.61"
tokio.workspace = true
tower-sessions = {version = "0.12.2", features = ["signed"]}
orm = {path = "../core-orm", package = "tccon_priors_orm"}
lazy_static = "1.4.0"
tower-http = {version = "0.5.0", features = ["fs"]}
