[package]
name = "web-app"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
askama = "0.14.0"
# askama_axum = "0.4.0"
async-trait.workspace = true
axum = { version = "0.8.4", features = ["json", "macros"] }
axum-login.workspace = true
base64.workspace = true
chrono.workspace = true
djangohashers.workspace = true
env_logger.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
markdown = "1.0.0"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
# tera = "1.19.1"
thiserror.workspace = true
tokio.workspace = true
tower-sessions = { version = "0.14.0", features = ["signed"] }
orm = { path = "../core-orm", package = "tccon_priors_orm" }
lazy_static = "1.4.0"
tokio-util = "0.7.16"
tower-http = { version = "0.5.0", features = ["fs"] }
url.workspace = true
urlencoding = "2.1.3"
utoipa.workspace = true
utoipa-axum = "0.2.0"
